symengine/parser/sbml/sbml_tokenizer.cpp
/* Generated by re2c 2.0.3 */
#line 1 "sbml_tokenizer.re"
#include "sbml_tokenizer.h"
#include "sbml_parser.tab.hh"

namespace SymEngine
{

void SbmlTokenizer::set_string(const std::string &str)
{
    // The input string must be NULL terminated, otherwise the tokenizer will
    // not detect the end of string. After C++11, the std::string is guaranteed
    // to end with \0, but we check this here just in case.
    SYMENGINE_ASSERT(str[str.size()] == '\0');
    cur = (unsigned char *)(&str[0]);
}

int SbmlTokenizer::lex(SBMLSTYPE &yylval)
{
    for (;;) {
        tok = cur;

#line 24 "sbml_tokenizer.cpp"
        {
            unsigned char yych;
            static const unsigned char yybm[] = {
                0,   0,   0,   0,   0,   0,   0,   0,   0,   32,  32,  32,  0,
                32,  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,
                0,   0,   0,   0,   0,   0,   32,  0,   0,   0,   0,   0,   0,
                0,   0,   0,   0,   0,   0,   0,   0,   0,   192, 192, 192, 192,
                192, 192, 192, 192, 192, 192, 0,   0,   0,   0,   0,   0,   0,
                128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128,
                128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128,
                0,   0,   0,   0,   128, 0,   128, 128, 128, 128, 128, 128, 128,
                128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128,
                128, 128, 128, 128, 128, 128, 0,   0,   0,   0,   0,   128, 128,
                128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128,
                128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128,
                128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128,
                128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128,
                128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128,
                128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128,
                128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128,
                128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128,
                128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128,
                128, 128, 128, 128, 128, 128, 128, 128, 128,
            };
            yych = *cur;
            if (yybm[0 + yych] & 32) {
                goto yy6;
            }
            if (yych <= '<') {
                if (yych <= '&') {
                    if (yych <= '!') {
                        if (yych <= 0x00)
                            goto yy2;
                        if (yych <= 0x1F)
                            goto yy4;
                        goto yy9;
                    } else {
                        if (yych <= '$')
                            goto yy4;
                        if (yych <= '%')
                            goto yy11;
                        goto yy12;
                    }
                } else {
                    if (yych <= '.') {
                        if (yych <= '\'')
                            goto yy4;
                        if (yych <= '-')
                            goto yy11;
                        goto yy13;
                    } else {
                        if (yych <= '/')
                            goto yy11;
                        if (yych <= '9')
                            goto yy14;
                        if (yych <= ';')
                            goto yy4;
                        goto yy17;
                    }
                }
            } else {
                if (yych <= '^') {
                    if (yych <= '?') {
                        if (yych <= '=')
                            goto yy18;
                        if (yych <= '>')
                            goto yy19;
                        goto yy4;
                    } else {
                        if (yych <= '@')
                            goto yy11;
                        if (yych <= 'Z')
                            goto yy20;
                        if (yych <= ']')
                            goto yy4;
                        goto yy11;
                    }
                } else {
                    if (yych <= 'z') {
                        if (yych == '`')
                            goto yy4;
                        goto yy20;
                    } else {
                        if (yych == '|')
                            goto yy23;
                        if (yych <= 0x7F)
                            goto yy4;
                        goto yy20;
                    }
                }
            }
        yy2:
            ++cur;
#line 42 "sbml_tokenizer.re"
            {
                return sbmltokentype::END_OF_FILE;
            }
#line 115 "sbml_tokenizer.cpp"
        yy4:
            ++cur;
        yy5 :
#line 41 "sbml_tokenizer.re"
        {
            throw SymEngine::ParseError("Unknown token: '" + token() + "'");
        }
#line 121 "sbml_tokenizer.cpp"
        yy6:
            yych = *++cur;
            if (yybm[0 + yych] & 32) {
                goto yy6;
            }
#line 43 "sbml_tokenizer.re"
            {
                continue;
            }
#line 129 "sbml_tokenizer.cpp"
        yy9:
            yych = *++cur;
            if (yych == '=')
                goto yy24;
        yy10 :
#line 46 "sbml_tokenizer.re"
        {
            return tok[0];
        }
#line 136 "sbml_tokenizer.cpp"
        yy11:
            ++cur;
            goto yy10;
        yy12:
            yych = *++cur;
            if (yych == '&')
                goto yy26;
            goto yy10;
        yy13:
            yych = *++cur;
            if (yych <= '/')
                goto yy5;
            if (yych <= '9')
                goto yy28;
            goto yy5;
        yy14:
            yych = *(mar = ++cur);
            if (yybm[0 + yych] & 64) {
                goto yy14;
            }
            if (yych <= 'D') {
                if (yych == '.')
                    goto yy30;
            } else {
                if (yych <= 'E')
                    goto yy31;
                if (yych == 'e')
                    goto yy31;
            }
        yy16 :
#line 54 "sbml_tokenizer.re"
        {
            yylval.string = token();
            return sbmltokentype::NUMERIC;
        }
#line 163 "sbml_tokenizer.cpp"
        yy17:
            yych = *++cur;
            if (yych == '=')
                goto yy33;
            goto yy10;
        yy18:
            yych = *++cur;
            if (yych == '=')
                goto yy35;
            goto yy5;
        yy19:
            yych = *++cur;
            if (yych == '=')
                goto yy37;
            goto yy10;
        yy20:
            yych = *++cur;
            if (yybm[0 + yych] & 128) {
                goto yy20;
            }
#line 53 "sbml_tokenizer.re"
            {
                yylval.string = token();
                return sbmltokentype::IDENTIFIER;
            }
#line 183 "sbml_tokenizer.cpp"
        yy23:
            yych = *++cur;
            if (yych == '|')
                goto yy39;
            goto yy5;
        yy24:
            ++cur;
#line 49 "sbml_tokenizer.re"
            {
                return sbmltokentype::NE;
            }
#line 192 "sbml_tokenizer.cpp"
        yy26:
            ++cur;
#line 51 "sbml_tokenizer.re"
            {
                return sbmltokentype::AND;
            }
#line 197 "sbml_tokenizer.cpp"
        yy28:
            yych = *(mar = ++cur);
            if (yych <= 'D') {
                if (yych <= '/')
                    goto yy16;
                if (yych <= '9')
                    goto yy28;
                goto yy16;
            } else {
                if (yych <= 'E')
                    goto yy31;
                if (yych == 'e')
                    goto yy31;
                goto yy16;
            }
        yy30:
            yych = *++cur;
            if (yych <= '/')
                goto yy16;
            if (yych <= '9')
                goto yy28;
            goto yy16;
        yy31:
            yych = *++cur;
            if (yych <= ',') {
                if (yych == '+')
                    goto yy41;
            } else {
                if (yych <= '-')
                    goto yy41;
                if (yych <= '/')
                    goto yy32;
                if (yych <= '9')
                    goto yy42;
            }
        yy32:
            cur = mar;
            goto yy16;
        yy33:
            ++cur;
#line 47 "sbml_tokenizer.re"
            {
                return sbmltokentype::LE;
            }
#line 230 "sbml_tokenizer.cpp"
        yy35:
            ++cur;
#line 50 "sbml_tokenizer.re"
            {
                return sbmltokentype::EQ;
            }
#line 235 "sbml_tokenizer.cpp"
        yy37:
            ++cur;
#line 48 "sbml_tokenizer.re"
            {
                return sbmltokentype::GE;
            }
#line 240 "sbml_tokenizer.cpp"
        yy39:
            ++cur;
#line 52 "sbml_tokenizer.re"
            {
                return sbmltokentype::OR;
            }
#line 245 "sbml_tokenizer.cpp"
        yy41:
            yych = *++cur;
            if (yych <= '/')
                goto yy32;
            if (yych >= ':')
                goto yy32;
        yy42:
            yych = *++cur;
            if (yych <= '/')
                goto yy16;
            if (yych <= '9')
                goto yy42;
            goto yy16;
        }
#line 55 "sbml_tokenizer.re"
    }
}

} // namespace SymEngine
